2003-04-21  Martin Baulig  <martin@ximian.com>
	* backends/Debugger.cs (Quit): Removed.

svn path=/trunk/debugger/; revision=13852

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-04-21  Martin Baulig  <martin@ximian.com>
 
+	* backends/Debugger.cs (Quit): Removed.
+
 	* frontends/scripting/ScriptingContext.cs (process_events):
 	Removed, we don't need to run the glib main loop anymore to get
 	the target's output.
