--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-04-22  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
+	(MonoSymbolFileTable.Reload): Don't load any referenced assemblies
+	here; we already get a notification from the metadata library when
+	it's loading them.
+
 2003-04-21  Martin Baulig  <martin@ximian.com>
 
 	Use a new libzvt based terminal widget to display the target's
