--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-04  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Dropped support for the old JIT, alwasy use Mini.
+
 2003-04-27  Martin Baulig  <martin@ximian.com>
 
 	Reworked the breakpoint code; we're now getting a callback from
