2003-05-08  Martin Baulig  <martin@ximian.com>
	* backends/mono-csharp/CSharpMethod.cs: Suppress duplicate line
	numbers.

	* classes/MethodSource.cs: Re-enable the ObjectCache.

svn path=/trunk/debugger/; revision=14395

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-08  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/CSharpMethod.cs: Suppress duplicate line
+	numbers.
+
+	* classes/MethodSource.cs: Re-enable the ObjectCache.
+
 2003-05-04  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/mini-main.c: Always use MONO_OPT_SHARED.
