--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-05-08  Martin Baulig  <martin@ximian.com>
 
+	* arch/bfdglue.c (bfd_glue_openr): New function.  We need to
+	g_strdup() the arguments since bfd_openr() takes their ownership,
+	but the P/Invoke wrapper would free it.
+
+2003-05-08  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono-csharp/CSharpMethod.cs: Suppress duplicate line
 	numbers.
 
