--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-10  Martin Baulig  <martin@ximian.com>
+
+	* arch/opcodes/: Imported from binutils 2.13.2.
+
+	* configure.in: Don't require libopcodes and dis-asm.h, but use
+	the included libopcodes.  Note that we still need libbfd for this.
+
 2003-06-08  Martin Baulig  <martin@ximian.com>
 
 	* frontends/gui/SourceView.cs: Made the context menu actually work.
