--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-20  Martin Baulig  <martin@ximian.com>
+
+	* wrapper/wrapper.c, wrapper/thread-manager.c: Don't declare
+	variables as volatile which are not actually modified by the
+	debugger.
+
 2003-06-14  Martin Baulig  <martin@ximian.com>
 
 	* backends/IInferior.cs (IInferiorStackFrame): Removed the
