2003-06-20  Martin Baulig  <martin@ximian.com>
	* doc/debugger.sxi: Added the slides from the GUADEC talk.

svn path=/trunk/debugger/; revision=15521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-20  Martin Baulig  <martin@ximian.com>
 
+	* doc/debugger.sxi: Added the slides from the GUADEC talk.
+
+2003-06-20  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/IArchitecture.cs
 	(GetBreakpointTrampolineData): Removed.
 	(IsRetInstruction): Added ITargetMemoryAccess argument.
