--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-22  Martin Baulig  <martin@ximian.com>
+
+	* backends/native/NativeStringType.cs: Derive from
+	NativeFundamentalType.
+
+	* backends/native/NativeStringObject.cs: Derive from
+	NativeFundamentalObject.
+
 2003-06-21  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetType.cs (GetObject): New method.
