--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-06-23  Martin Baulig  <martin@ximian.com>
+
+	* arch/DwarfReader.cs: Improved native type support.
+
+	* backends/native/NativeOpaqueObject.cs: New class.
+	* backends/native/NativePointerObject.cs: New class.
+	* backends/native/NativePointerType.cs: New class.
+	* backends/native/NativeStructObject.cs: New class.
+	* backends/native/NativeStructType.cs: New class.
+
+	* frontends/scripting/Parser.jay: Added `$foo->test' syntax; allow
+	`*($foo.test)' syntax.
+
+	* frontends/scripting/Tokenizer.cs: Don't allow dots in identifiers.
+
 2003-06-22  Martin Baulig  <martin@ximian.com>
 
 	* backends/native/NativeStringType.cs: Derive from
