--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-30  Martin Baulig  <martin@ximian.com>
+
+	* arch/bfd: Imported from binutils 2.13.2.
+	* arch/libiberty: Likewise.
+
+	* arch/Makefile.am: We now build a minimal libbfd here and include
+	it in the libmonodebuggerbfdglue.la.
+
 2003-06-23  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetFunctionType.cs: New class.
