--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+July 4th, 2003 - Martin Baulig
+------------------------------
+
+Hmm, I forgot to write NEWS entries for a longer period of time.
+
 April 24th, 2003 - Martin Baulig
 --------------------------------
 
