2003-07-05  Martin Baulig  <martin@ximian.com>
	Released version 0.4 "New York City" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=15943

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 July 4th, 2003 - Martin Baulig
 ------------------------------
 
+Released version 0.4 "New York City" of the Mono Debugger :-)
+
+July 4th, 2003 - Martin Baulig
+------------------------------
+
 Hmm, I forgot to write NEWS entries for a longer period of time.
 
 April 24th, 2003 - Martin Baulig
