--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-05  Martin Baulig  <martin@ximian.com>
+
+	Released version 0.4 "New York City" of the Mono Debugger :-)
+
 2003-07-04  Martin Baulig  <martin@ximian.com>
 
 	* backends/DaemonThreadRunner.cs: Rewrote this to use the
