--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-28  Martin Baulig  <martin@ximian.com>
+
+	* frontends/scripting/Tokenizer.cs: Allow identifiers to be quoted
+	in apostrophs (').
+
+	* frontends/scripting/VariableExpression.cs
+	(StructAccessExpression): Do a simple overload resolution for methods.
+
 2003-07-22  Martin Baulig  <martin@ximian.com>
 
 	* backends/mono-csharp/MonoClass.cs: New class.  This is now used
